The default table cell background is now defined in <tr> elements.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@68 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -106,10 +106,11 @@ table {
 	clear: both;
 }
 
+table tr { background: #f2f2f2; }
+
 table td {
     padding: 5px;
     text-align: center;
-    background: #f2f2f2;
 }
 
 table thead td {
