Now firstname and lastname are correctly displayed.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@69 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/index.html
+++ b/core/templates/accounts/index.html
@@ -29,8 +29,8 @@
         {% for account in accounts %}
         <tr>
             <td>{{ account.username }}</td>
-            <td>{{ account.firstname|default:'<span class="disabled">empty.</span>' }}</td>
-            <td>{{ account.lastname|default:'<span class="disabled">empty.</span>' }}</td>
+            <td>{{ account.first_name|default:'<span class="disabled">empty.</span>' }}</td>
+            <td>{{ account.last_name|default:'<span class="disabled">empty.</span>' }}</td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/accounts/view/{{ account.id }}/">{% trans 'View' %}</a></li>
