Added contraints to the business logic of movements.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@70 71535020-02ba-11df-897e-95fb7fca2173

--- a/warehouses/templates/warehouses/movements/view.html
+++ b/warehouses/templates/warehouses/movements/view.html
@@ -18,8 +18,10 @@
     <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
     <ul class="actions">
+        {% if movement.is_last %}
         <li><a class="edit" href="/warehouses/movements/edit/{{ movement.id }}">{% trans 'Edit' %}</a></li>
         <li><a class="delete" href="/warehouses/movements/delete/{{ movement.id }}">{% trans 'Delete' %}</a></li>
+        {% endif %}
         <li><a class="warehouses" href="{{ movement.warehouse.get_absolute_url }}">{% trans 'Warehouse' %}</a></li>
     </ul>    
 {% endblock %}
