Added a couple of links.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@71 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/categories/index.html
+++ b/products/templates/products/categories/index.html
@@ -51,5 +51,6 @@
     {% endif %}
     <ul class="actions">
         <li><a class="add" href="/products/categories/add/">{% trans 'Add' %}</a></li>
+        <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
     </ul>
 {% endblock %}
