--- a/uoms/templates/uoms/categories/index.html
+++ b/uoms/templates/uoms/categories/index.html
@@ -43,5 +43,6 @@
     {% endif %}
     <ul class="actions">
         <li><a class="add" href="/uoms/categories/add/">{% trans 'Add' %}</a></li>
+        <li><a class="uoms" href="/uoms/">{% trans 'UOMs' %}</a></li>
     </ul>
 {% endblock %}
