--- a/warehouses/templates/warehouses/index.html
+++ b/warehouses/templates/warehouses/index.html
@@ -46,5 +46,6 @@
     {% endif %}
     <ul class="actions">
         <li><a class="add" href="/warehouses/add/">{% trans 'Add' %}</a></li>
+        <li><a class="movements" href="/warehouses/movements/">{% trans 'Movements' %}</a></li>
     </ul>
 {% endblock %}
