--- a/partners/templates/partners/index.html
+++ b/partners/templates/partners/index.html
@@ -24,13 +24,19 @@
             <td>{% trans 'Name' %}</td>
             <td>{% trans 'Supplier' %}</td>
             <td>{% trans 'Customer' %}</td>
+            <td>{% trans 'VAT Number' %}</td>
+            <td>{% trans 'Email' %}</td>
+            <td>{% trans 'URL' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
         {% for partner in partners %}
-        <tr>
-            <td>{{ partner.name }}</td>
+        <tr{% if partner.is_mine %} class="mine"{% endif %}>
+            <td class="name">{% if partner.is_mine %}<span class="sign">(*) </span>{% endif %}{{ partner.name }}</td>
             <td>{% if partner.is_supplier %}<span class="yes">{% trans 'Yes' %}</span>{% else %}<span class="no">{% trans 'No' %}</span>{% endif %}</td>
             <td>{% if partner.is_customer %}<span class="yes">{% trans 'Yes' %}</span>{% else %}<span class="no">{% trans 'No' %}</span>{% endif %}</td>
+            <td class="number">{{ partner.vat_number }}</td>
+            <td>{{ partner.email|default:'<span class="disabled">empty</span>' }}</td>
+            <td>{{ partner.url|default:'<span class="disabled">empty</span>' }}</td>
             <td>
                 <ul class="actions">
                     <li><a class="view" href="/partners/view/{{ partner.id }}/">{% trans 'View' %}</a></li>
