--- a/warehouses/templates/warehouses/view.html
+++ b/warehouses/templates/warehouses/view.html
@@ -27,16 +27,18 @@
             <td>{% trans 'Quantity' %}</td>
             <td>{% trans 'UOM' %}</td>
             <td>{% trans 'Product' %}</td>
+            <td>{% trans 'Price' %}</td>
             <td>{% trans 'Value' %}</td>
             <td>{% trans 'On' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
         {% for movement in warehouse.movement_set.all %}
         <tr class="{% if movement.verse %}in{% else %}out{% endif %}">
-            <td class="number"><strong class="sign">{% if movement.verse %}+{% else %}-{% endif %}</strong>{{ movement.quantity|cut:"-" }}</td>
+            <td class="number"><strong class="sign">{% if movement.verse %}+{% else %}-{% endif %}</strong>{{ movement.quantity }}</td>
             <td><a href="/uoms/view/{{ movement.product.uom.id }}/">{{ movement.product.uom }}</a></td>
             <td><a href="/products/view/{{ movement.product.id }}/">{{ movement.product }}</a></td>
-            <td class="number">{{ movement.value|cut:"-" }}</td>
+            <td class="number">{{ movement.price }}</td>
+            <td class="number">{{ movement.value }}</td>
             <td>{{ movement.last_modified }}</td>
             <td>
                 <ul class="actions">
