Mini-improvement of supplier rendering with "is_mine" flag set to true.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@79 71535020-02ba-11df-897e-95fb7fca2173

--- a/partners/templates/partners/index.html
+++ b/partners/templates/partners/index.html
@@ -31,7 +31,7 @@
         </thead>
         {% for partner in partners %}
         <tr{% if partner.is_mine %} class="mine"{% endif %}>
-            <td class="name">{% if partner.is_mine %}<span class="sign">(*) </span>{% endif %}{{ partner.name }}</td>
+            <td class="name">{% if partner.is_mine %}<strong class="sign">(*)</strong>{% endif %}{{ partner.name }}</td>
             <td>{% if partner.is_supplier %}<span class="yes">{% trans 'Yes' %}</span>{% else %}<span class="no">{% trans 'No' %}</span>{% endif %}</td>
             <td>{% if partner.is_customer %}<span class="yes">{% trans 'Yes' %}</span>{% else %}<span class="no">{% trans 'No' %}</span>{% endif %}</td>
             <td class="number">{{ partner.vat_number }}</td>
