Fixed a small typo.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@81 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -17,7 +17,7 @@
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
-        </div>>
+        </div>
     </form>
     <ul class="actions">
         <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
