--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -13,8 +13,18 @@
 
 {% block content %}
     <h3>{% trans 'Add' %}</h3>
-    <form action="/products/add/" method="post">
+    <h4>Step {{ step }} of {{ step_count }}</h4>
+    <form action="." method="post">
+        {% if is_formset %}
+        {{ form.management_form }}
+        {% for f in form.forms %}
+        {{ f.as_p }}
+        {% endfor %}
+        {% else %}
         {{ form.as_p }}
+        {% endif %}
+        <input type="hidden" name="{{ step_field }}" value="{{ step0 }}" />
+        {{ previous_fields|safe }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
