--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -12,13 +12,12 @@
 {% endblock %}
 
 {% block content %}
-
+<h3>Login</h3>
 {% if form.errors %}
 <div class="message">
     <p class="error">{% trans "Your username and password didn't match. Please try again." %}</p>
 </div>
 {% endif %}
-
 <form method="post" action="/accounts/login/">
     <input type="hidden" name="next" value="{{ next }}" />
     
@@ -31,6 +30,5 @@
         <input type="submit" class="enter" value="{% trans 'Login' %}" />
     </div>
 </form>
-
 {% endblock %}
 
