Added optional entry for automatic permission middleware.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@92 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -85,7 +85,8 @@ MIDDLEWARE_CLASSES = (
     'django.middleware.locale.LocaleMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.contrib.auth.middleware.AuthenticationMiddleware',
-    'prometeo.core.middleware.RequireLoginMiddleware'
+    'prometeo.core.middleware.RequireLoginMiddleware',
+    #'prometeo.core.middleware.RequirePermissionMiddleware'
 )
 
 # Roor for URL dispatcher.
