Commented out the "Help" menu entry in the "user area".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@94 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/userarea.html
+++ b/core/templates/accounts/userarea.html
@@ -8,6 +8,6 @@
         {% else %}
         <li><a class="enter" href="/accounts/login/">{% trans 'Login' %}</a></li>
         {% endif %}
-        <li><a class="help" href="/help/">{% trans 'Help' %}</a></li>
+        {% comment %}<li><a class="help" href="/help/">{% trans 'Help' %}</a></li>{% endcomment %}
     </ul>
 </div>
