--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -59,6 +59,13 @@ ADMIN_MEDIA_PREFIX = '/media/admin/'
 # Make this unique, and don't share it with anybody.
 SECRET_KEY = '@0+5@-j+%_=c248g!5t)0qj2kkx(jo2um1epqz=a1$vc=745)2'
 
+# Language options.
+LANGUAGES = (
+  ('en', _('English')),
+)
+
+LANGUAGE_CODE = 'en'
+
 # List of callables that know how to import templates from various sources.
 TEMPLATE_LOADERS = (
     'django.template.loaders.filesystem.load_template_source',
