--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -25,7 +25,7 @@
     <table>
         <thead>
             <td>{% trans 'Name' %}</td>
-            <td>{% trans 'VAT Number' %}</td>
+            <td>{% trans 'VAT number' %}</td>
             <td>{% trans 'Price' %}</td>
             <td>{% trans 'Discount' %}</td>
             <td>{% trans 'Minimal quantity' %}</td>
