--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -22,6 +22,8 @@ __version__ = '$Revision: 4 $'
 
 import os
 
+_ = lambda s: s
+
 # Django settings for prometeo project.
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
@@ -62,6 +64,7 @@ SECRET_KEY = '@0+5@-j+%_=c248g!5t)0qj2kkx(jo2um1epqz=a1$vc=745)2'
 # Language options.
 LANGUAGES = (
   ('en', _('English')),
+  ('it', _('Italian')),
 )
 
 LANGUAGE_CODE = 'en'
