Fix for the missed special rendering of managed partners.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@100 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -318,8 +318,8 @@ form .message {
 .in .number-with-sign { background-image: url(images/plus.png); }
 .out .number-with-sign { background-image: url(images/minus.png); }
 
-.mine { background: #f6cdcd; }
-.mine .name {
+.managed { background: #f6cdcd; }
+.managed .name {
     padding-left: 25px;
     background-position: 5px center;
     background-repeat: no-repeat;
