--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -13,7 +13,7 @@
 
 {% block content %}
     <h3>{% trans 'Edit' %}</h3>
-    <h4>Step {{ step }} of {{ step_count }}</h4>
+    <h4>{% blocktrans %}Step {{ step }} of {{ step_count }}{% endblocktrans %}</h4>
     <form action="." method="post">
         {% if is_formset %}
         {{ form.management_form }}
