--- a/warehouses/templates/warehouses/movements/edit.html
+++ b/warehouses/templates/warehouses/movements/edit.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <h3>{% trans 'Edit' %}</h3>
-    <h4>Step {{ step }} of {{ step_count }}</h4>
+    <h4>{% blocktrans %}Step {{ step }} of {{ step_count }}{% endblocktrans %}</h4>
     <form action="." method="post">
         {{ form.as_p }}
         <input type="hidden" name="{{ step_field }}" value="{{ step0 }}" />
