--- a/products/templates/products/uoms/index.html
+++ b/products/templates/products/uoms/index.html
@@ -19,7 +19,7 @@
             <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
         </form>
     </div>
-    {% if uoms %}
+    {% if uoms.object_list %}
     <table>
         <thead>
             <td>{% trans 'Name' %}</td>
@@ -27,7 +27,7 @@
             <td>{% trans 'Category' %}</td>
             <td>{% trans 'Actions' %}</td>
         </thead>
-        {% for uom in uoms %}
+        {% for uom in uoms.object_list %}
         <tr>
             <td>{{ uom.name }}</td>
             <td>{{ uom.initials }}</td>
@@ -42,6 +42,7 @@
         </tr>
         {% endfor %}
     </table>
+    {% with uoms as pages %}{% include 'paginator.html' %}{% endwith %}
     {% else %}
     <p class="disabled">{% trans 'empty' %}.</p>
     {% endif %}
